# openxr-android-broker

./: .gitignore  .gitlab-ci.yml  LICENSE.md  build.gradle  gradle.properties  gradlew  settings.gradle
.reuse/: dep5
broker_lib/: build.gradle
broker_lib/src/main/: AndroidManifest.xml
broker_lib/src/main/res/values/: permission-strings.xml
gradle/wrapper/: gradle-wrapper.properties  gradle-wrapper.properties.license
installable_runtime_broker/: .gitignore  build.gradle
installable_runtime_broker/src/main/: AndroidManifest.xml
installable_runtime_broker/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_outline_info_24.xml
installable_runtime_broker/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_runtime_chooser.xml  listitem_two_line.xml
installable_runtime_broker/src/main/res/menu/: menu_runtime_chooser.xml
installable_runtime_broker/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
installable_runtime_broker/src/main/res/navigation/: nav_graph.xml
installable_runtime_broker/src/main/res/values/: colors.xml  dimens.xml  permission_strings.xml  strings.xml  themes.xml
nativesampleclient/: build.gradle
nativesampleclient/src/main/: AndroidManifest.xml
nativesampleclient/src/main/cpp/: CMakeLists.txt  NativeImpl.cpp
sampleclient/: build.gradle
sampleclient/src/main/: AndroidManifest.xml
system_runtime_broker/: build.gradle
system_runtime_broker/src/main/: AndroidManifest.xml
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
(+40 files in other folders)
